# micro-swarm

./: API_Stability.md  CMakeLists.txt  DLL_Nutzung.md  Embedding_Guide.md  Headless_Batch_Pipeline.md  LICENSE  MicroSwarmRunner.cs  Nutzung.md  README.md  Unity_Embedding.md  Unreal_Embedding.md
Baseline-Paper_Run/: baseline_metrics.csv  baseline_report.html  baseline_step000000_resources.csv  baseline_step000100_molecules.csv  baseline_step000100_mycel.csv  baseline_step000100_pheromone.csv  baseline_step000100_resources.csv  baseline_step000150_molecules.csv  baseline_step000150_resources.csv  baseline_step000200_pheromone.csv  baseline_step000250_mycel.csv  baseline_step000250_pheromone.csv  baseline_step000350_mycel.csv  baseline_step000400_mycel.csv  baseline_step000450_molecules.csv  baseline_step000450_resources.csv
Evolution_Selektion_scharf_gestellt/: evo_report.html  evo_step000000_mycel.csv  evo_step000050_mycel.csv  evo_step000050_pheromone.csv  evo_step000050_resources.csv  evo_step000150_mycel.csv  evo_step000150_pheromone.csv  evo_step000200_molecules.csv  evo_step000200_mycel.csv  evo_step000200_resources.csv  evo_step000250_molecules.csv  evo_step000250_resources.csv  evo_step000300_molecules.csv  evo_step000300_mycel.csv  evo_step000300_pheromone.csv  evo_step000300_resources.csv  evo_step000350_molecules.csv  evo_step000350_pheromone.csv  evo_step000350_resources.csv  evo_step000400_pheromone.csv  evo_step000400_resources.csv  evo_step000450_mycel.csv  evo_step000450_pheromone.csv
Plugins/MicroSwarm/: MicroSwarm.uplugin
Plugins/MicroSwarm/Source/MicroSwarmRuntime/: MicroSwarmRuntime.Build.cs
Plugins/MicroSwarm/Source/MicroSwarmRuntime/Private/: MicroSwarmFieldUtils.cpp  MicroSwarmLoader.cpp  MicroSwarmRuntimeModule.cpp
Plugins/MicroSwarm/Source/MicroSwarmRuntime/Public/: MicroSwarmFieldUtils.h  MicroSwarmLoader.h  MicroSwarmRuntimeModule.h
Release/: micro_swarm.exp  micro_swarm.lib
Stress-Test_Adaptionslauf/: stress_report.html  stress_step000050_molecules.csv  stress_step000150_molecules.csv  stress_step000150_mycel.csv  stress_step000150_pheromone.csv  stress_step000150_resources.csv  stress_step000200_molecules.csv  stress_step000200_mycel.csv  stress_step000200_pheromone.csv  stress_step000200_resources.csv  stress_step000250_molecules.csv  stress_step000250_mycel.csv  stress_step000250_pheromone.csv  stress_step000250_resources.csv  stress_step000300_molecules.csv  stress_step000300_mycel.csv  stress_step000300_pheromone.csv  stress_step000300_resources.csv  stress_step000350_molecules.csv  stress_step000350_mycel.csv  stress_step000350_pheromone.csv  stress_step000350_resources.csv  stress_step000400_molecules.csv  stress_step000400_mycel.csv  stress_step000400_pheromone.csv  stress_step000400_resources.csv  stress_step000450_molecules.csv  stress_step000450_mycel.csv  stress_step000450_pheromone.csv  stress_step000450_resources.csv
Turbo-Evolution_Run/: evo_turbo_report.html  evo_turbo_step000400_molecules.csv  evo_turbo_step000600_molecules.csv  evo_turbo_step000600_mycel.csv  evo_turbo_step000600_pheromone.csv  evo_turbo_step000600_resources.csv  evo_turbo_step000800_molecules.csv  evo_turbo_step000800_mycel.csv  evo_turbo_step000800_pheromone.csv  evo_turbo_step000800_resources.csv  evo_turbo_step001000_molecules.csv  evo_turbo_step001000_mycel.csv  evo_turbo_step001000_pheromone.csv  evo_turbo_step001000_resources.csv  evo_turbo_step001200_molecules.csv  evo_turbo_step001200_mycel.csv  evo_turbo_step001200_pheromone.csv  evo_turbo_step001200_resources.csv  evo_turbo_step001400_molecules.csv  evo_turbo_step001400_mycel.csv  evo_turbo_step001400_pheromone.csv  evo_turbo_step001400_resources.csv  evo_turbo_step001600_molecules.csv  evo_turbo_step001600_mycel.csv  evo_turbo_step001600_pheromone.csv  evo_turbo_step001600_resources.csv  evo_turbo_step001800_molecules.csv  evo_turbo_step001800_mycel.csv  evo_turbo_step001800_pheromone.csv  evo_turbo_step001800_resources.csv
src/: main.cpp  micro_swarm_api.cpp  micro_swarm_api.h
src/compute/: opencl_loader.cpp  opencl_loader.h  opencl_runtime.cpp  opencl_runtime.h
src/compute/kernels/: diffuse.cl
src/sim/: agent.cpp  agent.h  dna_memory.cpp  dna_memory.h  environment.cpp  environment.h  fields.cpp  fields.h  io.cpp  io.h  mycel.cpp  mycel.h  params.h  report.cpp  report.h  rng.h
